# DAT341-Applied-machine-learning

./: README.md  pyproject.toml
Lab1/: Decision_tree.ipynb  Hemnet_data.xlsx  main.html  main.ipynb  main.py  task3.py
Lab2/: main.html  main.ipynb  main.py
Lab3/: main.py  run.sh  slurm-117858.out
Lab4/: aml_perceptron.py  doc_classification.py  main.html  main.ipynb  main.py
Lab5/: main.html  main.ipynb  main.py  new.py
